plugins {
    id 'java-library'
    id 'maven-publish'
    id 'com.diffplug.spotless' version '8.0.0'
}

group = 'net.zatrit'
version = project.version

repositories {
    mavenCentral()
}

dependencies {
    compileOnly libs.jetbrain.annotations

    compileOnly libs.lombok
    annotationProcessor libs.lombok

    implementation libs.google.gson
    implementation libs.google.guava

    implementation libs.aleph
}

java {
    sourceCompatibility = JavaVersion.VERSION_11
    targetCompatibility = JavaVersion.VERSION_11

    withSourcesJar()
}

jar {
    from('LICENSE.txt') {
        rename { 'META-INF/LICENSE.txt' }
    }
}

publishing {
    publications {
        //noinspection GroovyAssignabilityCheck
        java(MavenPublication) {
            //noinspection GroovyAssignabilityCheck
            from components.java
        }
    }
}

spotless {
  java {
    googleJavaFormat()
  }
}
